--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,38 +1,58 @@
-nav{
-  background-color: aliceblue;
-  padding: 15px;
-  display: flex;
-  gap:1em;
+html {
+    box-sizing: border-box;
+    font-size: 62.5%;
+    /* Reset para REMS - 62.5% = 10px de 16px*/
 }
 
-main{
-  text-align: center;
-  max-width: 960px;
-  margin:0 auto;
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
 }
 
-section{
-  margin-top: 3rem;
+
+/* nav {
+    background-color: aliceblue;
+    padding: 15px;
+    display: flex;
+    gap: 1em;
+} */
+
+header.site-header {
+    background: url(../images/1.jpg);
 }
 
-.cursos div{
-  background-color: black;
-  color: white;
-  max-width: 200px;
-  display: inline-block;
-  box-shadow: 5px 5px 10px black;
+main {
+    text-align: center;
+    max-width: 960px;
+    margin: 0 auto;
 }
-.fotos img{
-  max-width: 450px;
-  display: inline-block;
+
+section {
+    margin-top: 3rem;
 }
-ul li{
-  text-align: left;
+
+.cursos div {
+    background-color: black;
+    color: white;
+    max-width: 200px;
+    display: inline-block;
+    box-shadow: 5px 5px 10px black;
 }
+
+.fotos img {
+    max-width: 450px;
+    display: inline-block;
+}
+
+ul li {
+    text-align: left;
+}
+
 ul li::marker {
-  content: "🚀";
+    content: "🚀";
 }
 
-ol li{
-  text-align: left;
+ol li {
+    text-align: left;
 }
